fix: corrction style et une seule card pour tous les forms visible sur accueil

--- a/PIRESQuestions/PIRESQuestions/wwwroot/css/site.css
+++ b/PIRESQuestions/PIRESQuestions/wwwroot/css/site.css
@@ -18,5 +18,9 @@ html {
 }
 
 body {
-  margin-bottom: 60px;
+    margin-bottom: 60px;
+    background-color: #F5F5F5;
+}
+.card-header {
+    background-color: #F4B164;
 }
